fixed small bug for auto next

--- a/templates/labeling.html
+++ b/templates/labeling.html
@@ -226,7 +226,7 @@
                 if(document.getElementById('flexSwitchCheckDefault').checked) {
                     Pro_Label();
                     Next_Tweet();
-                    console.log('Checkbox checked')
+                    console.log('Checkbox checked');
                 }
                 else {
                     console.log("Checkbox is not checked..");
@@ -236,7 +236,7 @@
                 if(document.getElementById('flexSwitchCheckDefault').checked) {
                     Anti_Label();
                     Next_Tweet();
-                    console.log('Checkbox checked')
+                    console.log('Checkbox checked');
                 }
                 else {
                     console.log("Checkbox is not checked..");
@@ -246,7 +246,7 @@
                 if(document.getElementById('flexSwitchCheckDefault').checked) {
                     Neutral_Label();
                     Next_Tweet();
-                    console.log('Checkbox checked')
+                    console.log('Checkbox checked');
                 }
                 else {
                     console.log("Checkbox is not checked..");
@@ -256,7 +256,7 @@
                 if(document.getElementById('flexSwitchCheckDefault').checked) {
                     News_Label();
                     Next_Tweet();
-                    console.log('Checkbox checked')
+                    console.log('Checkbox checked');
                 }
                 else {
                     console.log("Checkbox is not checked..");
