--- a/templates/loading.html
+++ b/templates/loading.html
@@ -89,6 +89,6 @@
 		</div>
 	</div>
 </body>
-<script> window.location.replace('/analysis'); </script>
+<script> window.location.replace('/training'); </script>
 
 </html>
