Ladescreen für Datensatz

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
                         <p>Neuen Datensatz erstellen</p>
                         <hr index2>
                     </div>
-                    <form action="{{ url_for('search') }}" method="POST">
+                    <form action="{{ url_for('loading_screen_dataset') }}" method="POST">
                         <div class="main-space-bottom-left-input-fields">
                             <label for="search_term">Suchbegriff:</label>
                             <input type="text" name="search_term" id="search_term" placeholder="Eingeben"
