--- a/templates/labeling.html
+++ b/templates/labeling.html
@@ -161,6 +161,8 @@
                     <button class="labelbutton" type="button" onclick="Save_Results()" data-toggle="modal"
                         data-target="#SaveDataModal">
                         Active Learning</button>
+                    <button class="labelbutton" type="button" onclick="Switch_To_Model_Analysis()">
+                        Data Facts</button>
                     <!--@ELIAS  Hier muss noch die Funktionalität eingebaut werden, dass der Tweet aus dem Datensatz gelöscht wird-->
                     <!-- Default switch -->
                     <div id="checkbox-container" class="form-check form-switch">
