--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Home</title>
     <script src="../static/js/labeling.js"></script>
+    <!--die nächste Zeile verändert die Größe der Menübar-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"> </script>
@@ -11,6 +12,15 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css">
     <script src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"> </script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
+    <!--nächste Zeile verändert Höhe der Navbar, macht Schrift auf der ganzen Seite kleiner -->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <!--nächste Zeile verändert Höhe der Pfeile; Farbe und Abstand der hr-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../static/css/index.css">
     <link rel="stylesheet" href="../static/css/general.css">
 </head>
@@ -94,8 +104,10 @@
                         </div>
                         <input class="homebutton" type="submit" value="Auswählen" id="login_dataset_choice" />
                         <div class="main-space-bottom-right-buttons">
-                            <input class="homebutton" type="" value="Löschen" onclick="delete_csv()" id="" />
-                            <input class="homebutton" type="" onclick="download_csv()" value="Herunterladen" id="" />
+                            <input class="homebutton" type="" value="Löschen" onclick="delete_csv()" id="delete_dataset"
+                                delete />
+                            <input class="homebutton" type="" onclick="download_csv()" value="Herunterladen"
+                                id="download_dataset" download />
                         </div>
                     </form>
 
@@ -118,54 +130,54 @@
                 {% endif %}
                 {% endwith %}
                 {% block body %}{% endblock %}
+            </div>
         </div>
-    </div>
 
-    <script>
+        <script>
 
-        // the api lets us only choose dates up to one week prior
-        // fill in the current date and time
-        let today = new Date().toISOString().substr(0, 10);
-        var yesterday = new Date();
-        yesterday.setDate(yesterday.getDate() - 1);
-        yesterday = yesterday.toISOString().substr(0, 10);
+            // the api lets us only choose dates up to one week prior
+            // fill in the current date and time
+            let today = new Date().toISOString().substr(0, 10);
+            var yesterday = new Date();
+            yesterday.setDate(yesterday.getDate() - 1);
+            yesterday = yesterday.toISOString().substr(0, 10);
 
-        // five days before
-        var five_days_prior = new Date();
-        five_days_prior.setDate(five_days_prior.getDate() - 5);
-        five_days_prior = five_days_prior.toISOString().substr(0, 10);
+            // five days before
+            var five_days_prior = new Date();
+            five_days_prior.setDate(five_days_prior.getDate() - 5);
+            five_days_prior = five_days_prior.toISOString().substr(0, 10);
 
-        // six days before
-        var six_days_prior = new Date();
-        six_days_prior.setDate(six_days_prior.getDate() - 6);
-        six_days_prior = six_days_prior.toISOString().substr(0, 10);
+            // six days before
+            var six_days_prior = new Date();
+            six_days_prior.setDate(six_days_prior.getDate() - 6);
+            six_days_prior = six_days_prior.toISOString().substr(0, 10);
 
-        // set mins and maxes
-        document.getElementById("end_time").value = today;
-        document.getElementById("end_time").min = five_days_prior;
-        document.getElementById("end_time").max = today;
+            // set mins and maxes
+            document.getElementById("end_time").value = today;
+            document.getElementById("end_time").min = five_days_prior;
+            document.getElementById("end_time").max = today;
 
-        document.getElementById("start_time").value = yesterday;
-        document.getElementById("start_time").min = six_days_prior;
-        document.getElementById("start_time").max = yesterday;
+            document.getElementById("start_time").value = yesterday;
+            document.getElementById("start_time").min = six_days_prior;
+            document.getElementById("start_time").max = yesterday;
 
-        // minimum start date depends on current end date and max can only be the current end date - 1
-        function handler(e) {
-            // start_date min
-            var currrent_end_time = document.getElementById("end_time").value
-            currrent_end_time_number = Date.parse(currrent_end_time)
-            // var min_value_start_time = new Date(currrent_end_time_number)
-            // min_value_start_time.setDate(min_value_start_time.getDate() - 6);
-            // min_value_start_time = min_value_start_time.toISOString().substr(0, 10);
-            // document.getElementById("start_time").min = min_value_start_time;
-            // start_date_max
-            var max_value_start_time = new Date(currrent_end_time_number)
-            max_value_start_time.setDate(max_value_start_time.getDate() - 1);
-            max_value_start_time = max_value_start_time.toISOString().substr(0, 10);
-            document.getElementById("start_time").max = max_value_start_time;
-        }
+            // minimum start date depends on current end date and max can only be the current end date - 1
+            function handler(e) {
+                // start_date min
+                var currrent_end_time = document.getElementById("end_time").value
+                currrent_end_time_number = Date.parse(currrent_end_time)
+                // var min_value_start_time = new Date(currrent_end_time_number)
+                // min_value_start_time.setDate(min_value_start_time.getDate() - 6);
+                // min_value_start_time = min_value_start_time.toISOString().substr(0, 10);
+                // document.getElementById("start_time").min = min_value_start_time;
+                // start_date_max
+                var max_value_start_time = new Date(currrent_end_time_number)
+                max_value_start_time.setDate(max_value_start_time.getDate() - 1);
+                max_value_start_time = max_value_start_time.toISOString().substr(0, 10);
+                document.getElementById("start_time").max = max_value_start_time;
+            }
 
-    </script>
+        </script>
 
 </body>
 
