--- a/templates/labeling.html
+++ b/templates/labeling.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Labeling</title>
     <script src="../static/js/labeling.js"></script>
+    <!--nächste Zeile verändert Text Größe und Abstände der Navbar-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"> </script>
@@ -12,12 +13,18 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css">
     <script src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"> </script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <!--nächste Zeile verändert Höhe der Navbar-->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <!--nächste Zeile verändert Höhe der Pfeile; Farbe und Abstand der hr-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../static/css/labeling.css">
     <link rel="stylesheet" href="../static/css/tweet.css">
     <link rel="stylesheet" href="../static/css/general.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 
 </head>
 
@@ -33,60 +40,31 @@
                 <li class="arrow"></li>
                 <li><a class="nav-link active" href="/labeling" data-title="labeling">Labeling</a></li>
                 <li class="arrow"></li>
-                <li><a role="link" aria-disabled="true" data-title="analyse">Analyse</a></li>
+                <li><a class="nav-link" href="/analysis" data-title="analyse">Analyse</a></li>
             </ul>
         </div>
 
         <div class="main-space">
             <div class="main-space-top">
-                <p>Das hier ist die Labeling Seite. Ein Tweet nach dem Anderen wird aus dem Datensatz angezeigt und kann
-                    mit einem Label versehen werden. Ungeeignete Tweets können vollständig aus dem Datensatz gelöscht
-                    werden. Mit dem Button "Training starten" gelangt man zum nächsten Schritt, wo das Modell mit den
-                    bereits erstellten Labels trainiert wird.</p>
+                <p>Unser Annotationstool bietet eine ansprechende Benutzeroberfläche, in der die Tweets, die für die
+                    Analyse ausgewählt wurden, übersichtlich präsentiert werden. Der Annotator verfügt über
+                    Schaltflächen, welche es ermöglichen das Sentiment eines Tweets als positiv, negativ oder neutral zu
+                    kennzeichnen. Zusätzlich bietet die Benutzeroberfläche die Möglichkeit, Tweets, die für die Analyse
+                    irrelevant sind, auszuschließen. Nach einer gewissen Anzahl von Annotationen, kann das entsprechende
+                    Machine Learning Modell trainiert werden und dem Annotator Unterstützung leisten.
+                </p>
                 <hr index1>
 
 
                 <!--@ELIAS Button bitte noch entfernen. Habe ich nur gelassen, um dir die Funktionsweise zu zeigen.-->
                 <div class="w3-light-grey w3-round">
-                    <div id="myBar" class="w3-container w3-round w3-blue" style="width:{{progress}}%">{{progress}}%</div>
+                    <div id="myBar" class="w3-container w3-round w3-blue" style="width:{{progress}}%">{{progress}}%
+                    </div>
                 </div>
 
             </div>
             <div class="main-space-bottom">
                 <div class="tweet default">
-                    <div class="user-info">
-                        <div class="avatar-container"><img class="avatar" src={{profile_urls}} alt="Twitter avatar">
-                        </div>
-                        <div class="user-info-right">
-                            <div class="drop-button"><svg viewBox="0 0 24 24">
-                                    <g>
-                                        <path
-                                            d="M20.207 8.147c-.39-.39-1.023-.39-1.414 0L12 14.94 5.207 8.147c-.39-.39-1.023-.39-1.414 0-.39.39-.39 1.023 0 1.414l7.5 7.5c.195.196.45.294.707.294s.512-.098.707-.293l7.5-7.5c.39-.39.39-1.022 0-1.413z">
-                                        </path>
-                                    </g>
-                                </svg></div>
-                            <div class="user-name">
-                                <div class="user-name-txt"><span class="fake-link">{{user_name}}</span></div>
-                                <div class="icon"><svg viewBox="0 0 24 24" aria-label="Verified account"
-                                        class="verified-icon-svg">
-                                        <g>
-                                            <path
-                                                d="M22.5 12.5c0-1.58-.875-2.95-2.148-3.6.154-.435.238-.905.238-1.4 0-2.21-1.71-3.998-3.818-3.998-.47 0-.92.084-1.336.25C14.818 2.415 13.51 1.5 12 1.5s-2.816.917-3.437 2.25c-.415-.165-.866-.25-1.336-.25-2.11 0-3.818 1.79-3.818 4 0 .494.083.964.237 1.4-1.272.65-2.147 2.018-2.147 3.6 0 1.495.782 2.798 1.942 3.486-.02.17-.032.34-.032.514 0 2.21 1.708 4 3.818 4 .47 0 .92-.086 1.335-.25.62 1.334 1.926 2.25 3.437 2.25 1.512 0 2.818-.916 3.437-2.25.415.163.865.248 1.336.248 2.11 0 3.818-1.79 3.818-4 0-.174-.012-.344-.033-.513 1.158-.687 1.943-1.99 1.943-3.484zm-6.616-3.334l-4.334 6.5c-.145.217-.382.334-.625.334-.143 0-.288-.04-.416-.126l-.115-.094-2.415-2.415c-.293-.293-.293-.768 0-1.06s.768-.294 1.06 0l1.77 1.767 3.825-5.74c.23-.345.696-.436 1.04-.207.346.23.44.696.21 1.04z">
-                                            </path>
-                                        </g>
-                                    </svg></div>
-                            </div>
-                            <div class="user-nickname">@{{user_username}}</div>
-                        </div>
-                    </div>
-                    <div class="tweet-content">
-                        <div class="txt">{{tweet}}</div>
-                    </div>
-                    <div class="metadata">{{created_at}} <span class="fake-link app">Twitter for iPhone</span></div>
-                    <div class="rt-likes"><span class="fake-link num-rts"><strong>{{retweet_count}}</strong>
-                            Retweets</span><span class="fake-link num-quotes"><strong>{{quote_count}}</strong> Quoted
-                            Tweets</span><span class="fake-link num-likes"><strong>{{like_count}}</strong> Likes</span>
-                    </div>
                     <div class="bottom-buttons">
                         <div>
                             <div class="bottom-button blue">
@@ -151,19 +129,54 @@
                             <p>Skip</p>
                         </div>
                     </div>
+                    <hr>
+                    <div class="user-info">
+                        <div class="avatar-container"><img class="avatar" src={{profile_urls}} alt="Twitter avatar">
+                        </div>
+                        <div class="user-info-right">
+                            <div class="drop-button"><svg viewBox="0 0 24 24">
+                                    <g>
+                                        <path
+                                            d="M20.207 8.147c-.39-.39-1.023-.39-1.414 0L12 14.94 5.207 8.147c-.39-.39-1.023-.39-1.414 0-.39.39-.39 1.023 0 1.414l7.5 7.5c.195.196.45.294.707.294s.512-.098.707-.293l7.5-7.5c.39-.39.39-1.022 0-1.413z">
+                                        </path>
+                                    </g>
+                                </svg></div>
+                            <div class="user-name">
+                                <div class="user-name-txt"><span class="fake-link">{{user_name}}</span></div>
+                                <div class="icon"><svg viewBox="0 0 24 24" aria-label="Verified account"
+                                        class="verified-icon-svg">
+                                        <g>
+                                            <path
+                                                d="M22.5 12.5c0-1.58-.875-2.95-2.148-3.6.154-.435.238-.905.238-1.4 0-2.21-1.71-3.998-3.818-3.998-.47 0-.92.084-1.336.25C14.818 2.415 13.51 1.5 12 1.5s-2.816.917-3.437 2.25c-.415-.165-.866-.25-1.336-.25-2.11 0-3.818 1.79-3.818 4 0 .494.083.964.237 1.4-1.272.65-2.147 2.018-2.147 3.6 0 1.495.782 2.798 1.942 3.486-.02.17-.032.34-.032.514 0 2.21 1.708 4 3.818 4 .47 0 .92-.086 1.335-.25.62 1.334 1.926 2.25 3.437 2.25 1.512 0 2.818-.916 3.437-2.25.415.163.865.248 1.336.248 2.11 0 3.818-1.79 3.818-4 0-.174-.012-.344-.033-.513 1.158-.687 1.943-1.99 1.943-3.484zm-6.616-3.334l-4.334 6.5c-.145.217-.382.334-.625.334-.143 0-.288-.04-.416-.126l-.115-.094-2.415-2.415c-.293-.293-.293-.768 0-1.06s.768-.294 1.06 0l1.77 1.767 3.825-5.74c.23-.345.696-.436 1.04-.207.346.23.44.696.21 1.04z">
+                                            </path>
+                                        </g>
+                                    </svg></div>
+                            </div>
+                            <div class="user-nickname">@{{user_username}}</div>
+                        </div>
+                    </div>
+                    <div class="tweet-content">
+                        <div class="txt">{{tweet}}</div>
+                    </div>
+                    <div class="metadata">{{created_at}} <span class="fake-link app">Twitter for iPhone</span></div>
+                    <div class="rt-likes"><span class="fake-link num-rts"><strong>{{retweet_count}}</strong>
+                            Retweets</span><span class="fake-link num-quotes"><strong>{{quote_count}}</strong> Quoted
+                            Tweets</span><span class="fake-link num-likes"><strong>{{like_count}}</strong> Likes</span>
+                    </div>
+
                 </div>
 
                 <div class="main-space-bottom-right">
-                    <button class="labelbutton" type="button" , onclick="Previous_Tweet()" , id="Previous">
-                        VorherigerTweet</button>
-                    <button class="labelbutton" type="button" , onclick="Next_Tweet()" , id="Next">
-                        NächsterTweet</button>
                     <button class="labelbutton" type="button" onclick="Save_Results()" data-toggle="modal"
-                        data-target="#SaveDataModal">
-                        Active Learning</button>
+                        data-target="#SaveDataModal" active-learning>
+                        Intelligent sortieren</button>
+                    <button class="labelbutton" type="button" , onclick="Previous_Tweet()" , id="Previous">
+                        Vorheriger Tweet</button>
+                    <button class="labelbutton" type="button" , onclick="Next_Tweet()" , id="Next">
+                        Nächster Tweet</button>
                     <button class="labelbutton" type="button" onclick="Switch_To_Model_Analysis()">
                         Data Facts</button>
-                    <!--@ELIAS  Hier muss noch die Funktionalität eingebaut werden, dass der Tweet aus dem Datensatz gelöscht wird-->
+
                     <!-- Default switch -->
                     <div id="checkbox-container" class="form-check form-switch">
                         <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" />
@@ -223,48 +236,48 @@
     </div>
 
     <script>
-            // if checked add event listeners
-            labeled_pro.addEventListener('click', function() {
-                if(document.getElementById('flexSwitchCheckDefault').checked) {
-                    Pro_Label();
-                    Next_Tweet();
-                    console.log('Checkbox checked');
-                }
-                else {
-                    console.log("Checkbox is not checked..");
-                }
-            })
-            labeled_anti.addEventListener('click', function() {
-                if(document.getElementById('flexSwitchCheckDefault').checked) {
-                    Anti_Label();
-                    Next_Tweet();
-                    console.log('Checkbox checked');
-                }
-                else {
-                    console.log("Checkbox is not checked..");
-                }
-            })
-            labeled_neutral.addEventListener('click', function() {
-                if(document.getElementById('flexSwitchCheckDefault').checked) {
-                    Neutral_Label();
-                    Next_Tweet();
-                    console.log('Checkbox checked');
-                }
-                else {
-                    console.log("Checkbox is not checked..");
-                }
-            })
-            labeled_news.addEventListener('click', function() {
-                if(document.getElementById('flexSwitchCheckDefault').checked) {
-                    News_Label();
-                    Next_Tweet();
-                    console.log('Checkbox checked');
-                }
-                else {
-                    console.log("Checkbox is not checked..");
-                }
-            })
-                
+        // if checked add event listeners
+        labeled_pro.addEventListener('click', function () {
+            if (document.getElementById('flexSwitchCheckDefault').checked) {
+                Pro_Label();
+                Next_Tweet();
+                console.log('Checkbox checked');
+            }
+            else {
+                console.log("Checkbox is not checked..");
+            }
+        })
+        labeled_anti.addEventListener('click', function () {
+            if (document.getElementById('flexSwitchCheckDefault').checked) {
+                Anti_Label();
+                Next_Tweet();
+                console.log('Checkbox checked');
+            }
+            else {
+                console.log("Checkbox is not checked..");
+            }
+        })
+        labeled_neutral.addEventListener('click', function () {
+            if (document.getElementById('flexSwitchCheckDefault').checked) {
+                Neutral_Label();
+                Next_Tweet();
+                console.log('Checkbox checked');
+            }
+            else {
+                console.log("Checkbox is not checked..");
+            }
+        })
+        labeled_news.addEventListener('click', function () {
+            if (document.getElementById('flexSwitchCheckDefault').checked) {
+                News_Label();
+                Next_Tweet();
+                console.log('Checkbox checked');
+            }
+            else {
+                console.log("Checkbox is not checked..");
+            }
+        })
+
     </script>
 
     <script>
@@ -272,22 +285,22 @@
         var checkbox = document.getElementById("flexSwitchCheckDefault");
 
         // keep the setting state intact after refreshing the page
-        checkbox.addEventListener('change', function save(){
+        checkbox.addEventListener('change', function save() {
             console.log("save");
             var checkbox = document.getElementById('flexSwitchCheckDefault');
-            if(document.getElementById('flexSwitchCheckDefault').checked) {
+            if (document.getElementById('flexSwitchCheckDefault').checked) {
                 localStorage.setItem('flexSwitchCheckDefault', true);
             }
-            else{
+            else {
                 localStorage.setItem('flexSwitchCheckDefault', false);
             }
         });
 
-        function load(){    
+        function load() {
             console.log('load');
             var checked = localStorage.getItem('flexSwitchCheckDefault');
             if (checked == "true") {
-                document.getElementById("flexSwitchCheckDefault").setAttribute('checked','checked');
+                document.getElementById("flexSwitchCheckDefault").setAttribute('checked', 'checked');
             }
         };
     </script>
