--- a/static/css/loading.css
+++ b/static/css/loading.css
@@ -1,30 +1,33 @@
 /* ================== Layout für Loading Page ================== */
 
+html {
+  height: 100%;
+}
 /* Bereich für GIF und Text */
-.outer{
-    height: 100%;
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto;
-    grid-template-areas: "upper" "lower";
+.outer {
+  height: 100%;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  grid-template-areas: "upper" "lower";
 }
 
 /* Bereich für GIF */
-.upper{
-grid-area: "upper";
-display: flex;
-align-items: flex-end;
-justify-content: center;
+.upper {
+  grid-area: "upper";
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
 }
 /* Bereich für GIF */
-.lower{
-grid-area: "lower";
-display: flex;
-align-items: flex-start;
-justify-content: center;
+.lower {
+  grid-area: "lower";
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
 }
 
 /* GIF Größe */
-svg{
+svg {
   height: 10vh;
 }
