--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Startseite</title>
+    <title>Analyse</title>
     <script src="../static/js/labeling.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"> </script>
@@ -59,7 +59,7 @@
                 <div class="text">
                     <h3> Tweet mit den meisten Likes</h3>
                 </div>
-                <div class="tweet-default">
+                <div class="tweet default">
                     <div class="user-info">
                         <div class="avatar-container"><img class="avatar" src={{profile_urls}} alt="Twitter avatar">
                         </div>
