--- a/templates/start.html
+++ b/templates/start.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../static/css/start.css">
 </head>
 
-<body>
+<body id="start">
     <h3>Tweet Sentiment Analyse mithilfe von Active Learning</h3>
     <hr index1>
     <p>Dieses Tool bietet dem Nutzer die Möglichkeit Datensätze von Twitter Tweets zu erstellen, zu verwalten und zu
