--- a/templates/loading.html
+++ b/templates/loading.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="../static/css/general.css">
 </head>
 
-<body>
+<body id="loading">
 	<div class="outer">
 		<div class="upper">
 			<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
