--- a/static/css/analysis.css
+++ b/static/css/analysis.css
@@ -36,7 +36,8 @@
   text-align: justify;
 }
 .text h3 {
-  margin-top: 5vh;
+  margin-top: 4vh;
+  margin-bottom: 0px;
 }
 /* Layout für Tabelle und deren Überschrift */
 .main-space-bottom {
@@ -47,10 +48,9 @@
 }
 /* Layout für Wordcloud und Kuchendiagramm */
 .main-space-bottom-graphics {
-  display: grid;
-  grid-template-columns: 1fr auto;
-  align-items: center;
-  gap: 1vw;
+  display: flex;
+  flex-direction: column;
+  gap: 4vh;
 }
 /* runde Ecken für die Wordcloud */
 .wordcloud {
@@ -59,8 +59,11 @@
 }
 .piechart {
   border-radius: 10px 20px;
-  max-width: 30vw;
+  min-width: 30vw;
+  max-width: 50vw;
   max-height: auto;
+  margin-left: 50%;
+  transform: translateX(-50%);
 }
 
 /* Zentrieren der Tabellenüberschrift */
