analysis: added headers, changed text

--- a/templates/analysis.html
+++ b/templates/analysis.html
@@ -42,7 +42,7 @@
             <div class="main-space-top">
                 <h3>Analyse</h3>
                 <hr index1>
-                <p>Die Wordcloud zeigt eine visuelle Darstellung von häufig verwendeten Wörtern in einem Text. Das
+                <p>Die Wordcloud zeigt eine visuelle Darstellung von häufig verwendeten Hashtags im Datensatz. Das
                     Kuchendiagramm zeigt die Anteile der manuell erstellten Labels am Datensatz. Zusammen können beide
                     Grafiken helfen, die wichtigsten Themen oder Schwerpunkte in einer großen Menge an Tweets schnell zu
                     identifizieren. Auch die Tonalität oder Stimmung eines Datensatzes kann so einfach erfasst werden,
@@ -52,8 +52,14 @@
             <div class="main-space-bottom">
                 <div class="main-space-bottom-graphics">
                     <!--Display the WordCloud()-->
+                    <div class="text">
+                        <h3> Häufigste Hashtags</h3>
+                    </div>
                     <img class="wordcloud" src="../static/plots/wordcloud.png" alt="my plot">
                     <!--Display the PieChart()-->
+                    <div class="text">
+                        <h3> Anteil der manuell erstellten Labels</h3>
+                    </div>
                     <img class="piechart" src="../static/plots/piechart.png" alt="my plot">
                 </div>
                 <div class="text">
