labeling.html: added text

--- a/templates/labeling.html
+++ b/templates/labeling.html
@@ -51,12 +51,12 @@
                     Schaltflächen, welche es ermöglichen das Sentiment eines Tweets als positiv, negativ oder neutral zu
                     kennzeichnen. Zusätzlich bietet die Benutzeroberfläche die Möglichkeit, Tweets, die für die Analyse
                     irrelevant sind, auszuschließen. Nach einer gewissen Anzahl von Annotationen, kann das entsprechende
-                    Machine Learning Modell trainiert werden und dem Annotator Unterstützung leisten.
+                    Machine Learning Modell trainiert werden und dem Annotator Unterstützung leisten. Beim Drücken auf
+                    "Intelligent sortieren" werden die Tweets nach einer Kombination von Faktoren geordnet, die eine
+                    möglichst optimale Performance des Machine Learning Modells erlauben.
                 </p>
                 <hr index1>
 
-
-                <!--@ELIAS Button bitte noch entfernen. Habe ich nur gelassen, um dir die Funktionsweise zu zeigen.-->
                 <div class="w3-light-grey w3-round">
                     <div id="myBar" class="w3-container w3-round w3-blue" style="width:{{progress}}%">{{progress}}%
                     </div>
