--- a/templates/start.html
+++ b/templates/start.html
@@ -16,8 +16,13 @@
 </head>
 
 <body id="start">
-    <h3>Tweet Sentiment Analyse mithilfe von Active Learning</h3>
+    <h1>Tweet Sentiment Analyse mithilfe von Active Learning</h1>
     <hr index1>
+    <div class="subheading">
+        <h3>Teamprojekt Wirtschaft und Technologie</h3>
+        <h2 id="names">Elias Müller, Nicolas Zang, Davide Hailer, Cedric Smith</h2>
+        <h3>Supervisor: Alexander Grote</h3>
+    </div>
     <p>Dieses Tool bietet dem Nutzer die Möglichkeit Datensätze von Twitter Tweets zu erstellen, zu verwalten und zu
         labeln. Dafür gibt es ein intuitives Labeling Tool. Zusätzlich besteht die Möglichkeit Active Learning
         einzusetzen, um große Mengen von sprachlichen Informationen schnell und einfach zugänglich zu machen.
